--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,40 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <h1>Hello world !</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">colonne A</div>
+        <div class="col-6">colonne B</div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-6 col-lg-4 offset-lg-2">colonne C</div>
+        <div class="col-12 col-sm-6 col-lg-4">colonne D</div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-6 col-lg-3">colonne E</div>
+        <div class="col-12 col-sm-6 col-lg-3">colonne F</div>
+        <div class="col-12 col-sm-6 col-lg-3">colonne G</div>
+        <div class="col-12 col-sm-6 col-lg-3">colonne H</div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 offset-md-2 offset-lg-1">
+          colonne I
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 offset-lg-2">colonne J</div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 col-lg-3 col-xl-2">colonne K</div>
+        <div class="col-6 col-lg-2 offset-lg-1 offset-xl-2">colonne L</div>
+        <div class="col-6 col-lg-2">colonne M</div>
+        <div class="col-6 col-lg-3 col-xl-2 offset-lg-1 offset-xl-2">
+          colonne N
+        </div>
+      </div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
