--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,50 @@
       </footer>
     </div>
 
+    <!-- NESTING -->
+
+    <div class="section">
+      <h3>Nesting</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-sm-4">colonne A</div>
+          <div class="col-6 col-sm-4">colonne B</div>
+          <div class="col-12 col-sm-4">colonne C</div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-sm-3">
+            colonne D
+            <div class="row mx-0">
+              <div class="col-12">colonne D1</div>
+              <div class="col-12 col-xl-6">colonne D2</div>
+              <div class="col-12 col-xl-6">colonne D3</div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm">
+            colonne E
+            <div class="row mx-0">
+              <div class="col-12 col-md-6">colonne E1</div>
+              <div class="col-12 col-md-6">colonne E2</div>
+            </div>
+
+            <div class="row mx-0">
+              <div class="col-12 col-xl-4">colonne E3</div>
+              <div class="col-12 col-xl-4">colonne E4</div>
+              <div class="col-12 col-xl-4">colonne E5</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-sm-4">colonne F</div>
+          <div class="col-12 col-sm-4">colonne G</div>
+          <div class="col-12 col-sm-4">colonne H</div>
+        </div>
+      </div>
+    </div>
+
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
