added col breakpoints

--- a/src/index.html
+++ b/src/index.html
@@ -133,13 +133,13 @@
       <h3>Nesting</h3>
       <div class="container">
         <div class="row">
-          <div class="col-6 col-sm-4">colonne A</div>
-          <div class="col-6 col-sm-4">colonne B</div>
-          <div class="col-12 col-sm-4">colonne C</div>
+          <div class="col-6 col-sm-4 col-lg">colonne A</div>
+          <div class="col-6 col-sm-4 col-lg-6">colonne B</div>
+          <div class="col-12 col-sm-4 col-lg">colonne C</div>
         </div>
 
         <div class="row">
-          <div class="col-12 col-sm-3">
+          <div class="col-12 col-sm-4">
             colonne D
             <div class="row mx-0">
               <div class="col-12">colonne D1</div>
